<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SandwichShop</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_order_form">OrderFormActivity</string>
    <string name="radio_button_wheat">Wheat</string>
    <string name="radio_button_white">White</string>
    <string name="radio_button_rye">Rye</string>
    <string name="sandwich_restaurant">Order Form</string>
    <string name="bread_options">Bread options:</string>
    <string name="topping_options">Topping options:</string>
    <string name="checkbox_tomato">Tomato</string>
    <string name="checkbox_pickles">Pickles</string>
    <string name="checkbox_bacon">Bacon</string>
    <string name="checkbox_egg">Egg</string>
    <string name="checkbox_lettuce">Lettuce</string>
    <string name="checkbox_cheese">Cheese</string>
    <string name="checkbox_onion">Onion</string>
    <string name="button_place_order">Place order</string>
    <string name="checkbox_olives">Olives</string>
    <string name="title_activity_order_confirmation">OrderConfirmationActivity</string>
    <string name="text_view_order_placed">Your order has been placed successfully!</string>
    <string name="title_activity_sandwich_count_selection">SandwichCountSelectionActivity</string>
    <string name="text_view_restaurant">How many sandwiches would you like to order? </string>
    <string name="button_continue">Continue</string>

</resources>
